changed function name

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ provider:
   region: us-east-1
 
 functions:
-  hello:
+  RandomGenerator:
     handler: src/handler.generateRandomNumber
     timeout: 60
     memorySize: 128 # mb
